samples/_failures_safe/1761195289_b20be1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86a79bb3.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_86a79bb3.c:167:16: error: missing terminating " character
  167 |         printf("Found identifier
      |                ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_86a79bb3.c:167:9: error: expected expression at end of input
  167 |         printf("Found identifier
      |         ^~~~~~
./samples/SAFE/__tmp_86a79bb3.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_86a79bb3.c:167:9: error: expected declaration or statement at end of input
